# CPRPN

firmware/: .clang-format  .editorconfig  .gitignore  sim.sh
firmware/lib/decNumberICU/: decBasic.c  decCommon.c  decDPD.h  decNumber.c  decNumber.h  decNumberLocal.h  decimal128.c  decimal32.c  decimal64.c
firmware/sim/: CMakeLists.txt  main.c
firmware/src/c47/: c47.c  c47.h  charString.c  charString.h  comparisonReals.c  comparisonReals.h  defines.h  longIntegerType.h  realType.c  realType.h  registerValueConversions.c  registerValueConversions.h  screen.c  screen.h  typeDefinitions.h
firmware/src/c47/_generated/: constantPointers.c  constantPointers.c.~1~  constantPointers.h
firmware/src/c47/mathematics/: 10pow.c  10pow.h  exp.c  exp.h  pcg_basic.c  pcg_basic.h  wp34s.c  wp34s.h
